# MetaStuff

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt
exampleCpp17/: CMakeLists.txt  JsonCast.h  JsonCast.inl  main.cpp
include/: Member.h  Member.inl  Meta.h  Meta.inl
include/detail/: MetaHolder.h
